--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello World 2</title>
 </head>
 <body>
-<h1>Hello World 2!</h1>
+<h1>Hello World 2! It's a great world!</h1>
 </body>
 </html>
